creates schema for db migration

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "node": "0.0.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sequelize": "^4.3.0",
+    "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
     "morgan": "^1.8.2"
