--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
+  "name": "getthrough-it",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/GMMx1/getthrough-it",
+  "author": "Juan Gabriel <juangabriel@pixeloak.com>",
+  "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "hashids": "^1.1.1",
+    "lodash": "^4.17.4",
+    "mysql2": "^1.3.5",
     "node": "0.0.0",
     "nodemon": "^1.11.0",
     "sequelize": "^4.3.0",
     "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "morgan": "^1.8.2"
+  },
+  "scripts": {
+    "start": "nodemon app.js --exec babel-node"
   }
 }
