--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "hashids": "^1.1.1",
@@ -14,6 +15,8 @@
     "mysql2": "^1.3.5",
     "node": "0.0.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "sequelize": "^4.3.0",
     "sequelize-cli": "^2.7.0"
   },
