--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "peer": "^0.2.8",
     "sequelize": "^4.3.0",
     "sequelize-cli": "^2.7.0"
   },
