--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 node_modules/
 package-lock.json
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
