--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Juan Gabriel <juangabriel@pixeloak.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
@@ -18,8 +19,11 @@
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "peer": "^0.2.8",
+    "pm2": "^2.6.1",
+    "rimraf": "^2.6.1",
     "sequelize": "^4.3.0",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "webpack": "^3.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -28,6 +32,9 @@
     "morgan": "^1.8.2"
   },
   "scripts": {
-    "start": "nodemon app.js --exec babel-node"
+    "start": "babel-node src/app.js",
+    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "prod:start": "NODE_ENV=production && pm2 start lib/app.js && pm2 logs",
+    "prod:stop": "pm2 delete app"
   }
 }
