--- a/package.json
+++ b/package.json
@@ -23,18 +23,16 @@
     "rimraf": "^2.6.1",
     "sequelize": "^4.3.0",
     "sequelize-cli": "^2.7.0",
-    "webpack": "^3.3.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "webpack": "^3.3.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "babel-cli": "^6.24.1"
   },
   "scripts": {
     "start": "babel-node src/app.js",
     "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
-    "prod:start": "NODE_ENV=production && pm2 start lib/app.js && pm2 logs",
-    "prod:stop": "pm2 delete app"
+    "prod:start": "node lib/app.js",
+    "eb:start": "sequelize db:migrate && npm run prod:build && npm run prod:start"
   }
 }
