--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "author": "Juan Gabriel <juangabriel@pixeloak.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "hashids": "^1.1.1",
     "lodash": "^4.17.4",
+    "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
     "node": "0.0.0",
     "nodemon": "^1.11.0",
@@ -23,11 +27,7 @@
     "rimraf": "^2.6.1",
     "sequelize": "^4.3.0",
     "sequelize-cli": "^2.7.0",
-    "webpack": "^3.3.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "morgan": "^1.8.2",
-    "babel-cli": "^6.24.1"
+    "webpack": "^3.3.0"
   },
   "scripts": {
     "start": "babel-node src/app.js",
