removed npm script productionization

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "babel-node src/app.js",
     "dev:start": "nodemon -e js --exec babel-node src/app.js",
     "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
-    "prod:start": "NODE_ENV=production && pm2 start lib/app.js && pm2 logs",
+    "prod:start": "pm2 start lib/app.js && pm2 logs",
     "prod:stop": "pm2 delete app",
     "db:migrate": "sequelize db:migrate"
   }
