--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
     "prod:start": "pm2 start lib/app.js && pm2 logs",
     "prod:stop": "pm2 delete app",
-    "db:migrate": "sequelize db:migrate"
+    "db:migrate": "sequelize db:migrate",
+    "db:seed:all": "sequelize db:seed:all"
   }
 }
